# library-registry

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  Pipfile  README.md  adobe_vendor_id.py  alembic.ini  app.py  app_helpers.py  authentication_document.py  config.json.sample  config.py  controller.py  db_migration.py  docker-compose-cicd.yml  docker-compose.yml  emailer.py  geography_loader.py  geometry_loader.py  languages.py  log.py  model.py  opds.py  package-lock.json  package.json  pagination.py  problem_details.py  pyproject.toml  registrar.py  requirements.txt  scripts.py  setup.cfg  templates.py  test  testing.py  (+2 more)
.github/: pull.yml
.github/workflows/: build.yml  jira-release-sync.yml  lint.yml  sync.yml  test-build.yml  test.yml
admin/: __init__.py  config.py  templates.py
alembic/: env.py
alembic/versions/: 4f716132bf58_upload_logos_to_s3.py  7dc7590e1819_remove_library_logo.py  9b462df21780_remove_admins_with_empty_passwords.py  aa6b44e2e879_library_logo_url.py  c57a4d8f1e23_convert_datetime_columns_to_timestamptz.py
docker/: Dockerfile.postgis  Dockerfile.webapp  docker-entrypoint.sh  gunicorn.conf.py  nginx.conf  postgis_init.sh  runinvenv  supervisord-alpine.ini  webpack-watch
docs/: Deployment.md  Development.md  NonDockerInstallation.md
library_registry/: adobe_vendor_id.py  app.py  app_helpers.py  authentication_document.py  config.py  constants.py  controller.py  decorators.py  emailer.py  geometry_loader.py  log.py  model.py  model_helpers.py  opds.py  problem_details.py  registrar.py  scripts.py  templates.py
library_registry/admin/: __init__.py  admin_blueprint.py  controller.py  decorators.py  routes.py
library_registry/blueprints/: __init__.py  library_protocol_blueprint.py
library_registry/drm/: __init__.py  controller.py  drm_blueprint.py  routes.py
library_registry/drm/templates/: adobe_xml_templates.py
library_registry/library_list/: __init__.py  controller.py  routes.py
library_registry/library_list/templates/: templates.py
library_registry/library_protocol/: __init__.py  library_protocol_blueprint.py  routes.py
library_registry/library_registration_protocol/: __init__.py  controller.py  routes.py
library_registry/models/: library.py  session_manager.py
library_registry/util/: __init__.py  app_server.py  flask_util.py  geo.py  http.py  language.py  problem_detail.py  shared_controller.py  short_client_token.py  string_helpers.py  xmlparser.py
palace/registry/: opds.py  registrar.py  scripts.py
palace/registry/admin/: config.py
palace/registry/sqlalchemy/: session.py  util.py
palace/registry/sqlalchemy/model/: __init__.py  admin.py  audience.py  base.py  collection_summary.py  configuration_setting.py  delegated_patron_identifier.py  hyperlink.py  (+5 more)
palace/registry/util/: app_server.py  file_storage.py  flask_util.py  language.py  problem_detail.py  short_client_token.py
src/palace/registry/: __init__.py  app_helpers.py  authentication_document.py  config.py  controller.py  db_migration.py  emailer.py  geometry_loader.py  log.py  opds.py  pagination.py  problem_details.py  route_links.py  scripts.py
tests/: __init__.py  conftest-ext.py  conftest.py  mocks.py  test_admin_ui.py  test_adobe_vendor_id.py  test_app.py  test_authentication_document.py  test_blueprint_routes.py  test_controller.py  test_db_migration.py  test_decorators.py  test_emailer.py  test_flask_sqlalchemy_session.py  test_flask_util.py  test_geography_loader.py  test_geometry_loader.py  test_language.py  test_languages.py  test_log.py  test_model.py  test_opds.py  test_pagination.py  test_registrar.py  test_scripts.py  test_short_client_token.py  test_util.py  test_util_http.py  test_util_string_helpers.py  utils.py
tests/admin/: test_config.py
tests/data/: boston_geojson.json  crude_albany_geojson.json  crude_kings_county_geojson.json  crude_new_york_county_geojson.json  crude_us_geojson.json  ct_state_geojson.json  kansas_state_geojson.json  manhattan_ks_geojson.json  new_mexico_state_geojson.json  ny_city_geojson.json  ny_state_geojson.json  test_geometry_loader_ndjson.ndjson  test_load_places_script_ndjson.ndjson  zip_10018_geojson.json  zip_11212_geojson.json  zip_12601_geojson.json
tests/fixtures/: controller.py  database.py  s3.py
tests/models/: test_admin.py  test_audience.py  test_collectionsummary.py  test_configurationsetting.py  test_delegatedpatronidentifier.py  test_externalintegration.py  test_library.py  test_place.py  test_resource.py
tests/registry/: test_app_helpers.py  test_authentication_document.py  test_controller.py  test_db_migration.py  test_emailer.py  test_flask_sqlalchemy_session.py  test_geometry_loader.py  test_language.py  test_log.py  test_opds.py  test_pagination.py  test_registrar.py  test_route_links.py  test_scripts.py
tests/registry/admin/: test_config.py
tests/registry/adobe/: test_adobe_vendor_id.py
tests/registry/sqlalchemy/: test_session.py  test_util.py
tests/registry/util/: test_app_server.py  test_file_storage.py  test_flask_util.py  test_flask_util2.py  test_http.py  test_xray.py
tests/util/: test_app_server.py  test_file_storage.py  test_flask_util.py  test_geo.py  test_http.py  test_short_client_token.py  test_string_helpers.py  test_xray.py
util/: __init__.py  app_server.py  file_storage.py  flask_util.py  http.py  language.py  languages.py  problem_detail.py  short_client_token.py  string_helpers.py  xmlparser.py  xray.py
(+34 files in other folders)
