[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
description = "The Palace Project library registry"
homepage = "https://thepalaceproject.org"
license = "Apache-2.0"
name = "library-registry"
readme = "README.md"
repository = "https://github.com/ThePalaceProject/library-registry"
version = "0" # Version number is managed with tags in git

[tool.poetry.dependencies]
alembic = "^1.8.1"
aws-xray-sdk = "<2.11"
bcrypt = "3.2.0"
feedparser = "*"
Flask = "~1.1.2"
Flask-Babel = "2.0.0"
Flask-Bcrypt = "*"
Flask-SQLAlchemy-Session = "1.1"
GeoAlchemy2 = "*"
gunicorn = "*"
loggly-python-handler = "*"
lxml = "*"
maxminddb-geolite2 = "*"
Pillow = "*"
psycopg2 = { version = "*", optional = true }
psycopg2-binary = { version = "*", optional = true }
pycryptodome = "*"
PyJWT = "*"
python = ">=3.7,<4"
requests = "*"
SQLAlchemy = "==1.3.24"
uszipcode = "==0.2.6"

[tool.poetry.dev-dependencies]
pre-commit = "~2.20"
pytest = "^7"
pytest-datadir = "*"
pytest-timeout = "*"

[tool.poetry.extras]
pg = ["psycopg2"]
pg-binary = ["psycopg2-binary"]

[tool.pytest.ini_options]
timeout = "600"
timeout_method = "thread"
