[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.isort]
profile = "black"

[tool.poetry]
authors = ["The Palace Project <info@thepalaceproject.org>"]
description = "The Palace Project library registry"
homepage = "https://thepalaceproject.org"
license = "Apache-2.0"
name = "library-registry"
readme = "README.md"
repository = "https://github.com/ThePalaceProject/library-registry"
version = "0"  # Version number is managed with tags in git

[tool.poetry.dependencies]
alembic = "^1.9.4"
aws-xray-sdk = "<2.12"
bcrypt = "3.2.0"
boto3 = "^1.26.78"
feedparser = "*"
Flask = "~1.1.2"
Flask-Babel = "2.0.0"
Flask-Bcrypt = "*"
Flask-SQLAlchemy-Session = "1.1"
GeoAlchemy2 = "*"
gunicorn = "*"
loggly-python-handler = "*"
lxml = "*"
maxminddb-geolite2 = "*"
Pillow = "*"
pycryptodome = "*"
PyJWT = "*"
python = ">=3.8,<4"
requests = "*"
SQLAlchemy = "==1.3.24"
uszipcode = "==0.2.6"

[tool.poetry.extras]
pg = ["psycopg2"]
pg-binary = ["psycopg2-binary"]

[tool.poetry.group.ci.dependencies]
dunamai = "^1.16.0"
pre-commit = "~2.21"
tox = "^3.26.0"
tox-docker = "^3.1.0"
tox-gh-actions = "^2.10.0"

[tool.poetry.group.dev.dependencies]
psycopg2-binary = "~2.9.5"
pytest = "^7"
pytest-datadir = "*"
pytest-timeout = "*"

[tool.poetry.group.pg]
optional = true

[tool.poetry.group.pg.dependencies]
psycopg2 = "~2.9.5"

[tool.pytest.ini_options]
timeout = "600"
timeout_method = "thread"

[tool.tomlsort]
ignore_case = true
in_place = true
sort_inline_arrays = true
sort_table_keys = true
spaces_before_inline_comment = 2
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
