[metadata]
name = library_registry
version = attr: library_registry.__version__
description = Library Registry
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Flask
    Framework :: Flake8
    Framework :: Sphinx
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Topic :: Internet :: WWW/HTTP :: Site Management
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
license_file = LICENSE

[bdist_wheel]
universal = False

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    library_registry